Stop image deformation on chballenge index

--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -46,7 +46,7 @@
                                      alt="photo du challenge" class="w-100 challenge-photo-container">
                             {% else %}
                                 <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
-                                     alt="photo par défaut du challenge" class="w-100">
+                                     alt="photo par défaut du challenge" class="w-100 challenge-photo-container">
                             {% endif %}
                             <img
                                     class="img-picto"
