Asterisques ajoutées dans les forms

--- a/templates/challenge/new.html.twig
+++ b/templates/challenge/new.html.twig
@@ -69,6 +69,7 @@
                 {{ form_help(form.description) }}
             </div>
             <div class="form-group col-lg-6 align-self-end">
+                <p class="mb-0 mandatory">*</p>
                 {{ form_errors(form.journey) }}
                 {{ form_widget(form.journey) }}
                 {{ form_help(form.journey) }}
