--- a/templates/component/_email-verified.html.twig
+++ b/templates/component/_email-verified.html.twig
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center bg-info py-1 align-items-center">
+<div class="d-flex justify-content-center bg-info align-items-center email-verif-popup">
     <span class="text-white font-weight-bold text-center mx-1">Votre mail n'est toujours pas vérifié</span>
     <button class="btn btn-light border mx-5">
         <a class="text-body" href="{{path('app_send_verify_email')}}">Envoyer mail</a>
