--- a/templates/homeBase.html.twig
+++ b/templates/homeBase.html.twig
@@ -16,7 +16,7 @@
     {% endif %}
     {% for category, messages in app.flashes %}
         {% for message in messages %}
-            <div class="alert alert-{{ category }}">
+            <div class="alert alert-{{ category }} email-verif-popup">
                 {{ message }}
             </div>
         {% endfor %}
