messages flash better display + cross to close email verifier message (popup-style)

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -127,6 +127,24 @@ body {
     padding: 10px;
     position: absolute;
     right: 0;
+    top: 10vh;
+    z-index: 500;
+}
+
+.email-flash-popup {
+    border-radius: 25px;
+    padding: 10px;
+    position: absolute;
+    right: 0;
     top: 5vh;
     z-index: 500;
+}
+
+.close-picto {
+    width: 20px;
+    transition-duration: 300ms;
+
+    &:hover {
+        transform: scale(1.4);
+    }
 }
