--- a/assets/styles/breakpoint.scss
+++ b/assets/styles/breakpoint.scss
@@ -2,6 +2,7 @@ $phone-width: 640px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 $large-desktop-width: 1200px;
+$very-large-desktop-width: 1500px;
 
 @mixin sm {
     @media screen and (min-width: #{$phone-width}) {
@@ -23,6 +24,12 @@ $large-desktop-width: 1200px;
 
 @mixin xl {
     @media screen and (min-width: #{$large-desktop-width}) {
+        @content;
+    }
+}
+
+@mixin xxl {
+    @media screen and (min-width: #{$very-large-desktop-width}) {
         @content;
     }
 }
