--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -1,3 +1,6 @@
+@import 'variables';
+@import '~bootstrap/scss/bootstrap';
+@import 'breakpoint';
 
 $heightcarousel: 600px;
 
@@ -109,11 +112,19 @@ div[id="home-main-carousel"] {
 
     .cadre-image-home-carousel {
         overflow: hidden;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+
+        @include xxl {
+            display: block !important;
+        }
 
         .image-home-carousel {
             display: block;
             min-height: 100%;
             min-width: 100%;
+            object-fit: cover;
         }
     }
 }
