--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -92,8 +92,8 @@ div[id="home-main-carousel"] {
 
     img[id="left-arrow-home-carousel"], img[id="right-arrow-home-carousel"] {
         position: absolute;
-        width: 12px;
-        height: 48px;
+        width: 20px;
+        height: 80px;
         transition: all ease-in-out 300ms;
         cursor: pointer;
 
@@ -132,7 +132,7 @@ div[id="home-main-carousel"] {
 .bloc-label-sport {
     background: #FBFBFB;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
 
     div[id="label-sport-carousel"] {
         height: 100px;
@@ -157,6 +157,11 @@ div[id="home-main-carousel"] {
     }
 }
 
+.home-carousel-logo {
+    width: 90px;
+    margin-right: 15px;
+}
+
 
 /*********************************************************
                        RESPONSIVE
@@ -166,13 +171,12 @@ div[id="home-main-carousel"] {
 @media all and (min-width: 0px) {
     .bloc-label-sport {
         display: flex;
-        justify-content: flex-start;
 
         div[id="label-sport-carousel"] {
             width: 94%;
 
             .up-arrow-label-sport {
-                left: 68.5%;
+                left: 50%;
             }            
         }
     }
@@ -181,13 +185,12 @@ div[id="home-main-carousel"] {
 @media all and (min-width: 576px) {
     .bloc-label-sport {
         display: flex;
-        justify-content: flex-end;
 
         div[id="label-sport-carousel"] {
             width: 94%;
 
             .up-arrow-label-sport {
-                left: 45%;
+                left: 75%;
             }            
         }
     }
@@ -199,7 +202,7 @@ div[id="home-main-carousel"] {
             width: 90%;
 
             .up-arrow-label-sport {
-                left: 46.5%;
+                left: 50%;
             }            
         }
     }
@@ -211,7 +214,7 @@ div[id="home-main-carousel"] {
             width: 83%;
 
             .up-arrow-label-sport {
-                left: 59.6%;
+                left: 60%;
             }
         }
     }
@@ -223,7 +226,7 @@ div[id="home-main-carousel"] {
             width: 80%;
 
             .up-arrow-label-sport {
-                left: 60%;
+                left: 62%;
             }
         }
     }
