--- a/assets/styles/homepage.scss
+++ b/assets/styles/homepage.scss
@@ -71,12 +71,13 @@
     width: 100px;
 
     @include sm {
-        width: 80px;
+        width: auto;
+        max-height: 100%;
+        height: auto;
     }
 
     @include md {
         max-width: 180px;
-        width: 80%;
     }
 }
 
