--- a/templates/homeBase.html.twig
+++ b/templates/homeBase.html.twig
@@ -22,7 +22,7 @@
         {% endfor %}
     {% endfor %}
         {% block body %}{% endblock %}
-        <div class="arrow-background"></div>
+        <div class="arrow-background" style="top: 150%"></div>
         {{ encore_entry_script_tags('app') }}
         {% block javascripts %}{% endblock %}
     </body>
