show on scroll for homepage elements

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -155,3 +155,16 @@ body {
         transform: scale(1.4);
     }
 }
+
+.hide-before-scroll {
+    opacity: 0;
+    transform: translateY(6em);
+    transition: transform 1s .25s,
+    opacity .3s .25s ease-out;
+    will-change: transform, opacity;
+}
+
+.is-visible {
+    opacity: 1;
+    transform: translateY(0em);
+}
