--- a/templates/profilBase.html.twig
+++ b/templates/profilBase.html.twig
@@ -11,10 +11,10 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body class="background-profile" style="background: url('{{ asset('build/images/background/bgimg1.jpeg') }}') no-repeat fixed center; background-size: cover;">
-    {% if app.user and not app.user.isVerified %}
-        {{ include('component/_email-verified.html.twig') }}
-    {% endif %}
-    <div class="arrow-background w-100"></div>
+        {% if app.user and not app.user.isVerified %}
+            {{ include('component/_email-verified.html.twig') }}
+        {% endif %}
+        <div class="arrow-background w-100"></div>
         {{ include('component/_header.html.twig') }}
         {% for category, messages in app.flashes %}
             {% for message in messages %}
@@ -24,6 +24,7 @@
             {% endfor %}
         {% endfor %}
         {% block body %}{% endblock %}
+        {{ include('component/_footer.html.twig') }}
         {{ encore_entry_script_tags('app') }}
         {% block javascripts %}{% endblock %}
     </body>
