--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -21,6 +21,12 @@
     <div class="main-carousel-home-page">
         {{ include('component/_home_main_carousel.html.twig') }}
     </div>
+    <section class="home-banner">
+        <p>En recherche de défis sportifs pour vous ou votre groupe d'amis ?
+            <br>KYOSC est la plateforme qu'il vous faut pour vous challenger dans une ambiance conviviale !
+            <br>Alors n'attendez plus, et lancez vous dans l'aventure !
+        </p>
+    </section>
     <section class="home-section home-challenges align-items-center hide-before-scroll show-on-scroll">
         {% if topChallenge %}
         <div class="homeTopSelection home-cartouche">
