--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -7,16 +7,13 @@
   background-color: $drawer-menu;
   display: flex;
   flex-direction: column;
+  font-size: 0.9rem;
   justify-content: center;
   padding: 20px;
   width: 100%;
 
   @include md {
     max-height: 200px;
-  }
-
-  @include xl {
-    font-size: larger;
   }
 
   a {
@@ -49,7 +46,11 @@
 }
 
 .dropdown-container {
-  margin: auto 20px 20px auto;
+  margin: auto 40% 10px auto;
+
+  @include md {
+    margin: auto 10% 10px auto;
+  }
 }
 
 .flag-logo {
@@ -61,5 +62,4 @@
 
 .flag-choice-dropdown {
   background-color: $drawer-menu;
-  max-width: 50px;
 }
