--- a/assets/styles/homepage.scss
+++ b/assets/styles/homepage.scss
@@ -81,6 +81,50 @@
     }
 }
 
+.home-banner {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    min-height: 200px;
+    padding: 30px;
+    width: 100%;
+
+    p {
+        background-color: #fff3;
+        border-radius: 20px;
+        color: black;
+        font-size: 1.2em;
+        font-weight: bold;
+        padding: 10px;
+    }
+}
+
+.home-choice-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+
+    @include md {
+        flex-direction: row;
+    }
+}
+
+.home-choice {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+}
+
+.home-choice-picto {
+    max-height: 60px;
+    max-width: 60px;
+}
+
 .home-button-wrapper {
     margin-left: auto;
 
