--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -15,6 +15,7 @@ $theme-colors: (
 
 $drawer-menu: #111;
 $black: #111;
+$transparent-black: #1118;
 $light: #fff;
 
 $pagination-active-bg: $black;
