--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -22,6 +22,7 @@ h1, h2 {
 body {
     display: flex;
     flex-direction: column;
+    min-height: 190vh;
 }
 
 .logo {
@@ -103,6 +104,10 @@ body {
     max-width: 100px;
     max-height: 100px;
     border-radius: 50%;
+}
+
+.biography-text {
+    font-size: 1.4em;
 }
 
 .background-grey {
