--- a/assets/styles/challengeShow.scss
+++ b/assets/styles/challengeShow.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .challenge-photo {
     max-width: -webkit-fill-available;
     max-width: -moz-available;
@@ -73,9 +75,10 @@
 
     .profil-photo-challenge {
         align-self: center;
-        border-radius: 20%;
+        border-radius: 25%;
         max-width: 200px;
         max-height: 200px;
+        box-shadow: 5px 5px 2px $transparent-black;
     }
 }
 
