--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     font-size: 0.9rem;
     justify-content: center;
+    margin-top: auto;
     padding: 20px;
     width: 100%;
 
