--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container min-vh-100">
         <form method="post" class="form-kyosc">
             {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -30,7 +30,7 @@
                             Mot de passe oublié ?
                         </a>
                     </div>
-                    <div class="mt-3">
+                    <div class="mt-3 d-flex justify-content-between">
                         <a href="{{ path('app_register') }}" class="btn mb-2 mr-2 btn-register" type="submit">
                             Je n'ai pas de compte
                         </a>
