--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -9,7 +9,7 @@ $theme-colors: (
     'grey': #eae9e9,
     'kblue-typo': #108ace,
     'ksky-blue': #d3f5f8,
-    'homeSecondColor': #c0dd10,
+    'homeSecondColor': #94c022,
     'arrowBackground': #eae9e9
 );
 
