--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -29,24 +29,28 @@
     </section>
     <section class="home-choice-container">
         <div class="home-choice hide-before-scroll show-on-scroll">
-            <h2>A propos de KYOSC</h2>
+            <h2>Connaitre KYOSC</h2>
             <img src="{{ asset('build/images/picto/ketoile.png') }}" class="home-choice-picto">
             <a>En savoir plus</a>
+            <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
-            <h2>Rejoindre KYOSC</h2>
+            <h2>Parcourir KYOSC</h2>
             <img src="{{ asset('build/images/picto/komplice.png') }}" class="home-choice-picto">
             <a>En savoir plus</a>
+            <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
             <h2>Créer un challenge</h2>
             <img src="{{ asset('build/images/picto/kequipe.png') }}" class="home-choice-picto">
             <a>En savoir plus</a>
+            <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
-            <h2>Gagner des badges</h2>
+            <h2>Gagner de l'experience</h2>
             <img src="{{ asset('build/images/picto/kblason.png') }}" class="home-choice-picto">
             <a>En savoir plus</a>
+            <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
     </section>
     <section class="home-section home-challenges align-items-center hide-before-scroll show-on-scroll">
