--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="container">
+            <div class="form-background">
                 <span> Votre mot de passe doit contenir au minimum 8 caractères, à savoir : au moins une lettre minuscule, une lettre majuscule et un chiffre. </span>
             </div>
             <div class="form-group col-lg-4 col-md-6 col-sm-6">
