--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -101,6 +101,11 @@
 
     .form-check {
         padding-left: 0;
+
+        label {
+            color: white;
+            text-shadow: 0 1px 0 black;
+        }
     }
 }
 
