White text in front of the home banner

--- a/assets/styles/homepage.scss
+++ b/assets/styles/homepage.scss
@@ -91,9 +91,9 @@
     width: 100%;
 
     p {
-        background-color: #fff3;
+        background-color: $transparent-black;
         border-radius: 20px;
-        color: black;
+        color: $light;
         font-size: 1.2em;
         font-weight: bold;
         padding: 10px;
