Bettergorgot password in login form

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,8 +29,8 @@
                 <div class="col-12 col-md-9 col-lg-8 align-self-center d-flex flex-column">
                     <label for="inputPassword"></label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required placeholder="Mot de passe">
-                    <div class="align-self-end">
-                        <a href="{{ path("app_forgot_password_request") }}">
+                    <div class="align-self-end mt-2">
+                        <a href="{{ path("app_forgot_password_request") }}" class="lisible-text">
                             Mot de passe oublié ?
                         </a>
                     </div>
