--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -18,8 +18,9 @@
         color: theme-color-level('kblue-typo');
     }
 
-    a {
-        color: theme-color-level('dark');
+    a:hover {
+        text-decoration: none;
+        color: initial;
     }
 
     p {
@@ -107,6 +108,13 @@
             text-shadow: 0 1px 0 black;
         }
     }
+}
+
+.lisible-text {
+    background-color: $transparent-black;
+    border-radius: 20px;
+    color: $light;
+    padding: 10px;
 }
 
 .img-goutte {
