no hover effect on link in homepage

--- a/assets/styles/homepage.scss
+++ b/assets/styles/homepage.scss
@@ -126,6 +126,11 @@
     &:hover .up-arrow-choice {
         opacity: 1;
     }
+
+    a:hover {
+        text-decoration: none;
+        color: inherit;
+    }
 }
 
 .home-choice-picto {
