Better header in challenge index with dynamic logo and dynamic color for categories

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -31,6 +31,21 @@ body {
     width: 60px;
 }
 
+.logo-challenge {
+    background-color: white;
+    min-width: 200px;
+    padding: 5px;
+    width: 15%;
+}
+
+.challenge-index-title {
+    flex: auto;
+
+    @include md {
+        font-size: 3em;
+    }
+}
+
 .fit-content {
     width: fit-content;
 }
