--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -18,16 +18,24 @@
 
 {% block body %}
     {% include 'challenge/_filterChallenge.html.twig' %}
-    {% if sport %}
-        <header class="arrow-header text-center text-uppercase my-4" style="background-color: {{ sport.color }};">
-            <h2>
+    {% if sportColor and sport %}
+        <header class="d-flex align-items-center text-center text-uppercase mt-3 mb-5" style="background-color: {{ sportColor }};">
+            <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
+            <h2 class="challenge-index-title">
                 les prochains challenges
                 <span class="text-white">{{ sport.name }}</span>
             </h2>
         </header>
     {% else %}
-        <header class="arrow-header text-uppercase my-4 bg-dark text-white">
-            <h2>Tous les challenges</h2>
+        <header {% if sportColor %} class="d-flex align-items-center text-uppercase mt-3 mb-5" style="background-color: {{ sportColor }};"
+                {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
+                {% endif %}>
+            <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
+            <h2 class="challenge-index-title">Tous les challenges
+                {% if category %}
+                    "{{ category.name }}"
+                {% endif %}
+            </h2>
         </header>
     {% endif %}
 
