--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -19,7 +19,7 @@
 {% block body %}
     {% include 'challenge/_filterChallenge.html.twig' %}
     {% if sportColor and sport %}
-        <header class="d-flex align-items-center text-center text-uppercase mt-3 mb-5" style="background-color: {{ sportColor }};">
+        <header class="d-flex align-items-center text-center text-uppercase mt-3 mb-5" style="background: {{ sportColor }};">
             <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
             <h2 class="challenge-index-title">
                 les prochains challenges
@@ -27,7 +27,7 @@
             </h2>
         </header>
     {% else %}
-        <header {% if sportColor %} class="d-flex align-items-center text-uppercase mt-3 mb-5" style="background-color: {{ sportColor }};"
+        <header {% if sportColor %} class="d-flex align-items-center text-uppercase mt-3 mb-5" style="background: {{ sportColor }};"
                 {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
                 {% endif %}>
             <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
