replace pictos with gouttes in challenge index

--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -42,7 +42,7 @@
     <main class="container-fluid">
         <div class="row justify-content-center">
             {% for challenge in pagination %}
-                {% set sportPicto = challenge.sports|length>1 ? multiSportPicto : challenge.sports|length==1 ? "/uploads/picto/"~challenge.sports['0'].picto : defaultLogo %}
+                {% set sportGoutte = challenge.sports|length>1 ? multiSportGoutte : challenge.sports|length==1 ? "/uploads/goutte/"~challenge.sports['0'].goutte : defaultLogo %}
                 {% set sportColor = challenge.sports|length>1 ? multiSportColor : challenge.sports|length==1 ? challenge.sports['0'].color : '#FFF' %}
                 <div class="col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative">
                     <a class="card text-decoration-none text-dark h-100 no-bg-border"
@@ -56,10 +56,8 @@
                                 <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
                                      alt="photo par défaut du challenge" class="w-100 challenge-photo-container">
                             {% endif %}
-                            <img
-                                    class="img-picto"
-                                    style="border-color:  {{ sportColor }};"
-                                    src={{ asset(sportPicto) }}>
+                            <div class="white-circle-img-goutte"></div>
+                            <img class="img-goutte" src={{ asset(sportGoutte) }}>
                         </div>
                         <div class="card-body p-2">
                             <h3 class="card-title h6 text-center text-uppercase">{{ challenge.title }}</h3>
