--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -60,15 +60,22 @@ body {
     z-index: -1000;
 }
 
-.img-picto {
-    background-color: $light;
-    border: 3px solid;
+.white-circle-img-goutte {
+    background-color: #fff;
     border-radius: 50%;
-    height: auto;
-    left: 7px;
+    height: 32px;
+    left: 14px;
     padding: 5px;
     position: absolute;
-    top: 10px;
+    top: 24px;
+    width: 28px;
+}
+
+.img-goutte {
+    height: auto;
+    left: 7px;
+    position: absolute;
+    top: 5px;
     width: 40px;
 }
 
